<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chassis</name>
  <version>1.0.0</version>
  <description>履带车底盘 CAN 控制 ROS2 节点 — 订阅 /cmd_vel 并通过 SocketCAN 控制底盘</description>
  <maintainer email="lonely@dev.com">lonely</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
